# fem-g

./: README.md
fem-master/: .gitignore  .gitlab-ci.yml  CMakeLists.txt
fem-master/contrib/bessel/: Bessel.cpp  Bessel.h  CMakeLists.txt
fem-master/contrib/robin-hood-hashing/: CMakeLists.txt  robin_hood.h
fem-master/examples/: .clang-format  CMakeLists.txt  README.md  README_template.md  example.cmake
fem-master/examples/helmholtz2d/diskScattering/: README.md  main.cpp
fem-master/examples/helmholtz2d/exactReflection/: README.md  main.cpp
fem-master/examples/helmholtz2d/waveguide/: README.md
fem-master/examples/maxwell2d/: CMakeLists.txt  main.cpp
fem-master/examples/maxwell3d/: README.md  main.cpp
fem-master/src/algebra/: AlgebraicFunctions.cpp  AlgebraicFunctions.h  AlgebraicObject.cpp  AlgebraicObject.h  CMakeLists.txt  Matrix.cpp  Matrix.h  MatrixCCS.cpp  MatrixCCS.h  MatrixCRS.cpp  MatrixCRS.h  MatrixCRSFast.cpp  MatrixCRSFast.h  Vector.cpp  Vector.h
fem-master/src/analytics/: AnalyticalFunction.h  CMakeLists.txt  Helmholtz2D.cpp  Helmholtz2D.h  Helmholtz3D.cpp  Helmholtz3D.h  Maxwell2D.cpp  Maxwell2D.h  Maxwell3D.cpp  Maxwell3D.h  Navier2D.cpp  Navier2D.h  analyticalOperations.h
fem-master/src/common/: ArgsManager.cpp  ArgsManager.h  CMakeLists.txt  Color.cpp  Color.h  ColorMap.cpp  ColorMap.h  CommandLine.cpp  CommandLine.h  Exception.cpp  Exception.h  GmshFem.cpp  GmshFem.h  KahanSum.h  MathObject.h  Memory.cpp  Memory.h  Message.cpp  Message.h  OmpInterface.cpp  OmpInterface.h  Options.cpp  Options.h  Timer.cpp  Timer.h  functional.h  gmshfemDefines.h.in  instantiate.h  numa.h  optionsEnums.h  scalar.h  templateUtils.h
fem-master/src/dofs/: CMakeLists.txt  Dof.cpp  Dof.h  DofsFactory.cpp  DofsFactory.h  DofsManager.cpp  DofsManager.h
fem-master/src/domain/: Axisymmetry.cpp  Axisymmetry.h  AxisymmetryShell.cpp  AxisymmetryShell.h  CMakeLists.txt  CylindricalShell.cpp  CylindricalShell.h  Domain.cpp  Domain.h  GeometricObject.cpp  GeometricObject.h  JacobiansModificator.cpp  JacobiansModificator.h  PeriodicLink.cpp  PeriodicLink.h  PolarShell.cpp  PolarShell.h  SkinLayer.cpp  SkinLayer.h  SphericalShell.cpp  SphericalShell.h
fem-master/src/equation/: CMakeLists.txt  Equation.cpp  Equation.h  Product.h  UnknownField.cpp  UnknownField.h
fem-master/src/field/: CMakeLists.txt  CompoundField.cpp  CompoundField.h  Field.cpp  Field.h  FieldInterface.cpp  FieldInterface.h  FieldModule.cpp  FieldModule.h  FieldObject.h  FieldRoutines.cpp  FieldRoutines.h  FunctionSpace.cpp  FunctionSpace.h  FunctionSpaceConstant.cpp  FunctionSpaceConstant.h  FunctionSpaceCurlHCurl.cpp  FunctionSpaceCurlHCurl.h  FunctionSpaceDivHDiv.cpp  FunctionSpaceDivHDiv.h  FunctionSpaceGradH1.cpp  FunctionSpaceGradH1.h  FunctionSpaceHierarchicalH1.cpp  FunctionSpaceHierarchicalH1.h  FunctionSpaceHierarchicalHCurl.cpp  FunctionSpaceHierarchicalHCurl.h  FunctionSpaceInterface.cpp  FunctionSpaceInterface.h  FunctionSpaceLagrange.cpp  FunctionSpaceLagrange.h  FunctionSpaceParallel.cpp  FunctionSpaceParallel.h  FunctionSpacePerpendicular.cpp  FunctionSpacePerpendicular.h  GlobalQuantity.cpp  GlobalQuantity.h
fem-master/src/function/: CMakeLists.txt  Function.h  GeneralEvaluableObject.cpp  GeneralEvaluableObject.h  PiecewiseFunction.cpp  PiecewiseFunction.h  ScalarFunction.cpp  ScalarFunction.h  Tensor4Function.cpp  Tensor4Function.h  TensorFunction.cpp  TensorFunction.h  VectorFunction.cpp  VectorFunction.h  scalarBinaryOperators.cpp  scalarBinaryOperators.h  scalarFieldOperators.cpp  scalarFieldOperators.h  scalarNullaryOperators.cpp  scalarNullaryOperators.h  scalarScalarTypeOperators.cpp  scalarScalarTypeOperators.h  scalarUnaryOperators.cpp  scalarUnaryOperators.h  tensor4BinaryOperators.cpp  tensor4BinaryOperators.h  tensor4NovenaryOperators.cpp  tensor4NovenaryOperators.h  tensor4UnaryOperators.cpp  tensor4UnaryOperators.h  tensorBinaryOperators.cpp  tensorBinaryOperators.h  tensorFieldOperators.cpp  tensorFieldOperators.h  tensorNovenaryOperators.cpp  tensorNovenaryOperators.h  tensorNullaryOperators.cpp  tensorNullaryOperators.h  tensorScalarTypeOperators.cpp  tensorScalarTypeOperators.h  (+16 more)
fem-master/src/post/: CMakeLists.txt  Integrate.cpp  Integrate.h  PointEvaluation.cpp  PointEvaluation.h  Post.cpp  Post.h  PostproMap.cpp  PostproMap.h  SaveField.cpp  SaveField.h  SaveFunction.cpp  SaveFunction.h
fem-master/src/problem/: CMakeLists.txt  ElementBucket.cpp  ElementBucket.h  Formulation.cpp  Formulation.h  FunctionSpaceBucket.cpp  FunctionSpaceBucket.h  IndiceBucket.cpp  IndiceBucket.h
fem-master/src/reorder/: CMakeLists.txt  Hilbert.cpp  Hilbert.h  RCM.cpp  RCM.h
fem-master/src/system/: CMakeLists.txt  MatrixFactory.cpp  MatrixFactory.h  MatrixModule.cpp  MatrixModule.h  MatrixOptions.cpp  MatrixOptions.h  PetscInterface.h  Solver.cpp  Solver.h  VectorFactory.cpp  VectorFactory.h
fem-master/src/term/: Assembler.cpp  Assembler.h  BilinearTerm.cpp  BilinearTerm.h  BilinearTermInterface.cpp  BilinearTermInterface.h  CMakeLists.txt  LinearTerm.cpp  LinearTerm.h  LinearTermInterface.cpp  LinearTermInterface.h  Pattern.cpp  Pattern.h  Term.cpp  Term.h
fem-master/tutorials/: CMakeLists.txt  README.md  tutorial.cmake
fem-master/tutorials/coupling/: main.cpp
fem-master/tutorials/dirichlet/: CMakeLists.txt  main.cpp
fem-master/tutorials/eigensolve/: main.cpp
fem-master/tutorials/functions/: main.cpp
fem-master/tutorials/multiRHS/: main.cpp
fem-master/tutorials/neumann/: main.cpp
fem-master/tutorials/nonLinear/: main.cpp
fem-master/tutorials/periodic/: main.cpp
fem-master/tutorials/postPro/: main.cpp
fem-master/tutorials/waveNewmark/: CMakeLists.txt  main.cpp
fem-master/unitTests/: README.md
fem-master/unitTests/coverage/: CMakeLists.txt  CodeCoverage.cmake  convergences.cpp  convergences.h  fields.cpp  fields.h  formulations.cpp  formulations.h  functions.cpp  functions.h  geo.cpp  geo.h  main.cpp  posts.cpp  posts.h
fem-master/utils/: gource.sh  runDemos.sh
fem-master/utils/basisFunction/: CMakeLists.txt  README.md  main.cpp
(+105 files in other folders)
